Fixed nav bar wrap for tablet use

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3213,6 +3213,7 @@ html[xmlns] .slider-wrap {
 
 	.header-row {
 		position: initial;
+		flex-wrap: nowrap;
 	}
 
 	#header.transparent-header,
